# c4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c4/: CMakeLists.txt  algorithm.hpp  bilateral_filter.hpp  blur.hpp  bmp.hpp  bmp24.hpp  byte_stream.hpp  classification_metrics.hpp  cmd_opts.hpp  color_plane.hpp  csv.hpp  dataset.hpp  drawing.hpp  exception.hpp  exif_orientation.hpp  fft.hpp  file_utils.hpp  fixed-point.hpp  fixed_point.hpp  geometry.hpp  image.hpp  image_dumper.hpp  image_io.hpp  integral_image.hpp  interpolation.hpp  jpeg.hpp  json.hpp  lbp.hpp  linear_algebra.hpp  lock_free_queue.hpp  logger.hpp  lzw.hpp  math.hpp  matrix.hpp  matrix_regression.hpp  meta_data_set.hpp  motion_detection.hpp  mstream.hpp  object_detection.hpp  optimization.hpp  (+18 more)
examples/: C4.cpp  CMakeLists.txt  example.cpp  lock_free_queue_example.cpp  matrix_regression_example.cpp  motion_detection_example.cpp  object_detection_example.cpp  piano_example.cpp  shape_predictor_trainer_example.cpp  ulz_example.cpp  video_stab_example.cpp  video_stabilization_example.cpp  wav_example.cpp
tests/: CMakeLists.txt  fft_tests.cpp  simd_tests.cpp
